# mini-overhead-detector

./: .gitignore  pyproject.toml
scripts/: convert_nwpu_to_yolo.py  explore_dataset.ipynb
src/mini_overhead_detector/: __init__.py
