[project]
name = "mini-overhead-detector"
version = "0.1.0"
description = "Mini overhead object detector"
readme = "README.md"
authors = [
    { name = "GuidonAntoine", email = "antoine.mguidonm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mini-overhead-detector = "mini_overhead_detector:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
