[project]
name = "mini-overhead-detector"
version = "0.1.0"
description = "Mini overhead object detector"
readme = "README.md"
authors = [
    { name = "GuidonAntoine", email = "antoine.mguidonm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
]

[project.scripts]
mini-overhead-detector = "mini_overhead_detector:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.0.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
]
